should fix #2113 Search Page - Ideas getting cut off
git-svn-id: http://svn.localprojects.net/gam2/trunk@1534 befef031-aaeb-48d0-b70f-681328309d3d

--- a/static/css/tc.gam.main.css
+++ b/static/css/tc.gam.main.css
@@ -673,8 +673,10 @@ OTHER GLOBAL ELEMENTS
 /* carousel */
 .carousel { position:relative; }
 .carousel .scrollable { position:relative; overflow:hidden; }
-.carousel .scrollable .items { position:absolute; width:2000em; }
+.carousel .scrollable .items { position:absolute; width:50000em; }
 .carousel .scrollable .items > li { float:left; }
+/*.carousel .scrollable .items { position:absolute; white-space:nowrap; }
+.carousel .scrollable .items > li { display:inline-block; *display:inline; zoom:1; }*/
 
 .carousel-controls { position:absolute; }
 .carousel-controls .next { 
